--- a/html/index.html
+++ b/html/index.html
@@ -55,7 +55,7 @@
     </div>
     </div>
     <footer>
-        <div id="copyright">Copyright&copy; 2020 - Todos los derechos reservados</div>
+        <div id="copyright">Copyright&copy; 2020 - Todos los derechos reservados.</div>
     </footer>
 </body>
 </html>
