--- a/html/index.html
+++ b/html/index.html
@@ -16,8 +16,8 @@
         <nav class="nav">
             <a href="" class="item">Home</a>
             <a href="" class="item">Tipos de mates</a>
-            <a href="" class="item">Contacto</a>
-            <a href="" class="item">Nosotros</a>
+            <a href="contacto.html" class="item">Contacto</a>
+            <a href="nosotros.html" class="item">Nosotros</a>
         </nav>
 
     </header>
