Optimiza script de contacto.

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/contacto.css">
     <title>MATERAZII - Home</title>
     <link rel="stylesheet" href="../css/styleIndex.css">
+    <script src="../js/contacto.js"></script>
 </head>
 <body>
     <div class="page-bg">
@@ -18,7 +19,7 @@
             <a href="index.html" class="item">Home</a>
             <a href="" class="item">Tipos de mates</a>
             <a href="contacto.html" class="item">Contacto</a>
-            <a href="" class="item">Nosotros</a>
+            <a href="nosotros.html" class="item">Nosotros</a>
         </nav>
 
     </header>
@@ -27,56 +28,55 @@
     <article class="article-consultas">
         <h1>Consulta</h1>
         <section>
-            <form action="">
+            <form id="form" action="">
                 <div>
                     <label for="">Email</label>
-                    <input type="email" name="" id="">
+                    <input type="email" name="" id="" required>
                 </div>
                 <div>
                     <label for="">Nombre</label>
-                    <input type="text" name="" id="">
+                    <input type="text" name="" id="" required>
                 </div>
                 <div>
                     <label for="">Consulta</label>
-                    <input type="text" name="" id="" >
+                    <input type="text" name="" id="" required>
                 </div>
+                <div style="justify-content: flex-end;">
+                    <p id="captcha"></p>
+                </div>
+                <div>
+                    <label for="">Ingrese el captcha: </label>
+                    <input type="text" name="" id="captcha-answer">
+                </div>
+                <div>
+                    <button id="submit-button">Submit</button>
+                </div>
+                <p id="message"></p>
             </form>
-        </section>
-        <section>
-            <div style="justify-content: flex-end;">
-                <p id="captcha"></p>
-            </div>
-            <div>
-                <label for="">Ingrese el captcha: </label>
-                <input type="text" name="" id="captcha-answer">
-            </div>
-            <div>
-                <button type="button" id="submit-button">Submit</button>
-            </div>
         </section>
     </article>
 
-    <div class="left-arrow arrow"><img src="../images/left-arrow.png" alt=""></div>
+    <div class="left-arrow arrow" id="left-arrow"><img src="../images/left-arrow.png" alt=""></div>
 
-    <aside class="redes-sociales no-display">
-        <div class="right-arrow arrow"><img src="../images/right-arrow.png" alt=""></div>
+    <aside id="redes-sociales" class="redes-sociales no-display">
+        <div class="right-arrow arrow" id="right-arrow"><img src="../images/right-arrow.png" alt=""></div>
         <ul>
             <li>
                 <div class="red-social">
-                    <a href="">Facebook</a>
-                    <a href=""><img class="social-icon" src="../images/fb-icon.png" alt=""> </a>
+                    <a href="https://www.facebook.com/">Facebook</a>
+                    <img class="social-icon" src="../images/fb-icon.png" alt="">
                 </div>
             </li>
             <li>
                 <div class="red-social">
-                    <a href="">Twitter</a>
-                    <a href=""><img class="social-icon" src="../images/tw-icon.png" alt=""> </a>
+                    <a href="https://twitter.com">Twitter</a>
+                    <img class="social-icon" src="../images/tw-icon.png" alt="">
                 </div>
             </li>
             <li>
                 <div class="red-social">
-                    <a href="">Instagram</a>
-                    <a href=""><img class="social-icon" src="../images/ig-icon.png" alt=""> </a>
+                    <a href="https://www.instagram.com">Instagram</a>
+                    <img class="social-icon" src="../images/ig-icon.png" alt="">
                 </div>
             </li>
         </ul>
@@ -84,10 +84,8 @@
 
 
     <footer>
-        <div id="copyright">Copyright&copy; 2020 - Todos los derechos reservados</div>
+        <div id="copyright">Copyright&copy; 2020 - Todos los derechos reservados.</div>
     </footer>
-
-    <script src="../js/contacto.js"></script>
 
 </body>
 </html>
