Listo la pagina editable Nosotros.

--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>MATERAZII - Home</title>
     <link rel="stylesheet" href="../css/styleIndex.css">
+    <link rel="stylesheet" href="../css/styleNosotros.css">
 </head>
 <body>
     <div class="page-bg">
@@ -21,6 +22,18 @@
         </nav>
 
     </header>
+
+    <section class="contacto">
+
+        <ul>
+            <li> <img src="../images/whatsapp.png" alt="whatsapp Mi Vianadita!" class="iconWhatsapp"> <a href="https://www.whatsapp.com/" class="textoRedes"> 2494-682201</a> </li>
+            <li> <img src="../images/facebook.png" alt="facebook Mi Vianadita!" class="iconFacebook"> <a href="https://www.facebook.com/" class="textoRedes" id="facebook">Materazii mates</a> </li>
+            <li> <img src="../images/reloj.png" alt="horario Mi Vianadita!" class="iconHorario"> <a class="textoRedes"> De 6:00am a 11:00am </a> </li>
+            <li> <img src="../images/instagram.png" alt="instagram Mi Vianadita!" class="iconInstagram"> <a href="https://www.instagram.com/" class="textoRedes">@Materazii</a> </li>
+        </ul>
+
+    </section>
+
     <footer>
         <div id="copyright">Copyright&copy; 2020 - Todos los derechos reservados</div>
     </footer>
