Agrega tabla con mates

--- a/html/table.html
+++ b/html/table.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>MATERAZII - Home</title>
     <link rel="stylesheet" href="../css/styleIndex.css">
+    <script src="../js/table.js"></script>
 </head>
 <body>
     <div class="page-bg">
@@ -14,7 +15,7 @@
         <h1 class="titulo">MATERAZII</h1>
 
         <nav class="nav">
-            <a href="index.html" class="item">Home</a>
+            <a href="" class="item">Home</a>
             <a href="" class="item">Tipos de mates</a>
             <a href="contacto.html" class="item">Contacto</a>
             <a href="nosotros.html" class="item">Nosotros</a>
@@ -22,6 +23,18 @@
         </nav>
 
     </header>
+
+    <table>
+        <thead>
+            <th>Titulo</th>
+            <th>Precio</th>
+            <th>Imagen</th>
+        </thead>
+        <tbody id="tbody">
+
+        </tbody>
+    </table>
+    
     <footer>
         <div id="copyright">Copyright&copy; 2020 - Todos los derechos reservados</div>
     </footer>
