--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
     <title>MATERAZII - Home</title>
     <link rel="stylesheet" href="../css/styleIndex.css">
 </head>
@@ -14,8 +13,8 @@
         <h1 class="titulo">MATERAZII</h1>
 
         <nav class="nav">
-            <a href="" class="item">Home</a>
-            <a href="" class="item">Tipos de mates</a>
+            <a href="index.html" class="item">Home</a>
+            <a href="TiposDeMate_Prueba1.html" class="item">Tipos de mates</a>
             <a href="contacto.html" class="item">Contacto</a>
             <a href="nosotros.html" class="item">Nosotros</a>
             <a href="table.html" class="item">Mates</a>
