--- a/html/table.html
+++ b/html/table.html
@@ -13,10 +13,9 @@
     </div>
     <header>
         <h1 class="titulo">MATERAZII</h1>
-
         <nav class="nav">
-            <a href="" class="item">Home</a>
-            <a href="" class="item">Tipos de mates</a>
+            <a href="index.html" class="item">Home</a>
+            <a href="TiposDeMate_Prueba1.html" class="item">Tipos de mates</a>
             <a href="contacto.html" class="item">Contacto</a>
             <a href="nosotros.html" class="item">Nosotros</a>
             <a href="table.html" class="item">Mates</a>
