Nuevo css al html table

--- a/html/table.html
+++ b/html/table.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>MATERAZII - Home</title>
     <link rel="stylesheet" href="../css/styleIndex.css">
+    <link rel="stylesheet" href="../css/styleTable.css">
     <script src="../js/table.js"></script>
 </head>
 <body>
