--- a/html/table.html
+++ b/html/table.html
@@ -16,7 +16,7 @@
         <h1 class="titulo">MATERAZII</h1>
         <nav class="nav">
             <a href="index.html" class="item">Home</a>
-            <a href="TiposDeMate_Prueba1.html" class="item">Tipos de mates</a>
+            <a href="tiposMate.html" class="item">Tipos de mates</a>
             <a href="contacto.html" class="item">Contacto</a>
             <a href="nosotros.html" class="item">Nosotros</a>
             <a href="table.html" class="item">Mates</a>
