--- a/html/mates.html
+++ b/html/mates.html
@@ -26,7 +26,7 @@
 
     <table>
         <thead>
-            <th>Titulo</th>
+            <th>Tipo</th>
             <th>Precio</th>
             <th>Imagen</th>
         </thead>
