Agrega parrafo en tipos de mate

--- a/html/tiposMate.html
+++ b/html/tiposMate.html
@@ -57,6 +57,7 @@
             <img src="../images/mate-de-metal.jpg" alt="mate de metal">
         </div>
     </div>
+    asdasd
     
 </body>
 </html>
