faltaba linkear mates.html en el nav

--- a/html/tiposMate.html
+++ b/html/tiposMate.html
@@ -21,7 +21,7 @@
             <a href="tiposMate.html" class="item">Tipos de mates</a>
             <a href="contacto.html" class="item">Contacto</a>
             <a href="nosotros.html" class="item">Nosotros</a>
-            <a href="table.html" class="item">Mates</a>
+            <a href="mates.html" class="item">Mates</a>
         </nav>
 
     </header>
